app/src/style.css
/* body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
} */

* {
  box-sizing: border-box;
  font-family: 'Figtree', "Lato", "Helvetica Neue", "Helvetica", sans-serif;
}

.page-background {
  background-color: #F5F5F5;
}

/* navbar */

.navbar {
  height: 82px;
}

.navbar-brand {
  margin-right: 100px;
}

.headerColor {
  background-color: #151515;
}

.form-control {
  border-radius: 40px;
  height: 42px;
  width: 242px;
}

.nav-link {
  color: white;
}

.nav-icon {
  height: 20px;
}

a {
  color: white;
  text-decoration: none;
}

nav ul li {
  padding-left: 2%;
  padding-right: 2%;
}

/* ALL PROFILE CARD STUFF */


.profile-card {
  border-radius: 3em;
}

.profile-background {
  height: 150px;
  object-fit: cover;
  border-radius: 3em 3em 0 0;
}

.profile-img {
  height: 7rem;
  width: 7rem;
  transform: translate(30%, -125%);
}

.gamer-tag {
  /* position: absolute; */
  /* left: 13%;
  top: 47%; */
  transform: translate(13%, -80%);
  color: white;
  font-weight: 700;
}

.card-body-height {
  height: 2em;
}

.status {
  /* position: absolute;
  left: 13%;
  bottom: 15%; */
  transform: translate(13%, -250%);
}

/* ALL GAME CARD STUFF */

.experience-header {
  font-weight: 700;
}

.stat-cluster {
  margin-left: 3em;
  margin-right: 3em;
}

.stat-card {
  background-color: #EEF3FF;
  border-radius: 2em;
}

.stat-number {
  font-size: 3em;
  font-weight: bold;
  color: #058F76;
}

